refactor: separate error from data using LoginData obj